--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@koa/router": "^10.1.1",
     "dotenv": "^10.0.0",
     "koa": "^2.13.1",
-    "koa-favicon": "^2.1.0"
+    "koa-favicon": "^2.1.0",
+    "koa-proxy": "^1.0.0-alpha.3"
   }
 }
