--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^10.0.0",
     "koa": "^2.13.1",
     "koa-favicon": "^2.1.0",
-    "koa-proxy": "^1.0.0-alpha.3"
+    "koa-proxy": "^1.0.0-alpha.3",
+    "koa-static": "^5.0.0"
   }
 }
